--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,13 +3,12 @@
   <head>
     <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1"> 
-      <title>Dorsin - Responsive Landing Page Template</title> 
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Conquer - CRM Solutions</title>
       <meta name="description" content="" />
       <meta name="keywords" content="" />
-      <meta name="author" content="Themesbrand" />   
+      <meta name="author" content="Themesbrand" />
       <link rel="shortcut icon" href="images/favicon.ico">
-   
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       <!-- Google Font -->
       <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,700|Rubik:300,400,500" rel="stylesheet">
@@ -31,15 +30,15 @@
 
       <!-- Custom Css -->
       <link rel="stylesheet" type="text/css" href="css/style.css" />
-      <link rel="stylesheet" href="css/colors/red.css" id="color-opt" /> 
+      <link rel="stylesheet" href="css/colors/red.css" id="color-opt" />
 
   </head>
   <body id="root" data-spy="scroll" data-target="#data-scroll"  data-hijacking="on" data-animation="scaleDown">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.easing.1.3.min.js"></script>  
+    <script src="js/jquery.easing.1.3.min.js"></script>
     <script src="js/scrollspy.min.js"></script>
     <!-- Sticky Header -->
     <script src="js/jquery.sticky.js"></script>
@@ -48,9 +47,9 @@
     <!-- Magnific Popup -->
     <script src="js/jquery.magnific-popup.min.js"></script>
     <!-- switcher js -->
-    <script src="js/switcher.js"></script>   
+    <script src="js/switcher.js"></script>
 
     <script src="js/app.js"></script>
-    
+
   </body>
 </html>
